tests/NormalTests/paczka2/big_fuzzy/95872890.err
Error in line 7: TgSprDb S946 31,4
Error in line 10: TApkS6 A658 99,2
Error in line 14: TgSprDb A59 93,3
Error in line 16: PKi6o S946 45,3
Error in line 17: PKi6o A59 75,9
Error in line 27: S946 A658 36,0
Error in line 28: S946 A59 69,9
Error in line 34: RCfm0fzJ A658 36,3
Error in line 53: PKi6o S658 100,1
Error in line 60: RCfm0fzJ S658 25,1
Error in line 78: RCfm0fzJ A658 60,0
Error in line 82: TApkS6 S658 66,1
Error in line 85: S946 A658 65,9
Error in line 86: S946 A59 21,4
Error in line 90: S946 S946 0,5
Error in line 94: RCfm0fzJ A658 78,8
Error in line 95: TgSprDb S946 67,0
Error in line 100: S946 S946 64,1
Error in line 107: TgSprDb S658 24,1
Error in line 117: RCfm0fzJ A65g 32,2
Error in line 109: PKi6o A59 93,5
Error in line 121: PKi6o A658 60,6
Error in line 123: PKi6o S946 71,0
Error in line 140: RCfm0fzJ S946 288,4
Error in line 143: TgSprDb S658 7,7
Error in line 137: PKi6o S658 37,9
Error in line 147: TgSprDb A658 2,9
Error in line 157: RCfm0fzJ S946 6,2
Error in line 167: PKi6o A59 179,4
Error in line 169: PKi6o S946 51,8
Error in line 173: RCfm0fzJ S658 5,5
Error in line 176: RCfm0fzJ A59 25,2
Error in line 178: 60ZyS A658 -1,1
Error in line 158: 60ZyS A658 91,4
Error in line 191: tPBWstFr5ยน A658 48,6
Error in line 192: tPBWstFr5a S658 75,9
Error in line 195: PKi6o S658 30,8
Error in line 202: 60ZyS S658 20,6
Error in line 217: S946 S658 62,63
Error in line 215: S946 A59 77,7
Error in line 223: TApkS6 S946 59,4
Error in line 235: TgSprDb A658 13,1
Error in line 238: TApkS6 A59 317,3
Error in line 244: TApkS6 S658 13,7
Error in line 241: TgSprDb S658 67,9
Error in line 246: TApkS6 A658 95,5
Error in line 248: TgSprDb A658 76,9
